--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
-	<script src="./js/script.js"></script>
+	<script src="js/script.js"></script>
 </body>
 
 
