--- a/worksPage.html
+++ b/worksPage.html
@@ -164,6 +164,6 @@
 	</div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
-	<script src="./js/webWorks.js"></script>
+	<script src="js/webWorks.js"></script>
 </body>
 </html>
