--- a/aboutPage.html
+++ b/aboutPage.html
@@ -26,6 +26,6 @@
 	</main>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
-	<script src="js/about.js"></script>
+	<script src="./js/about.js"></script>
 </body>
 </html>
